--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.generate-ddl=true
 spring.freemarker.expose-request-attributes=true
 upload.path=/C:/projectsNew/sweater/upload
+
+
+spring.mail.host=smtp.gmail.com 
+spring.mail.username=mail@gmail.com 
+spring.mail.password=password123 
+spring.mail.port=465
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.protocol=smtp
+mail.debug=true
